fix: 🐛 fix keyboard main field

--- a/packages/components/Keyboard/Keyboard.html
+++ b/packages/components/Keyboard/Keyboard.html
@@ -1,5 +1,5 @@
 <script>
-  import Keyboard from './lib/index.js';
+  import Keyboard from '.';
   import './css/Keyboard.css';
   import './css/KeyboardThemeMath.css';
   import './css/KeyboardThemeNumeric.css';
