--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -303,7 +303,7 @@
           /**/
         }
 
-        const { notPrevent, handlerContext } = hasKeystrokeToPrevent();
+        const { prevent, handlerContext } = hasKeystrokeToPrevent(keyName);
 
         if (handlerContext === document) {
           if (e.defaultPrevented || hasActiveHandlerFor(keyName)) {
@@ -371,7 +371,7 @@
          * If a shortcut element was found.
          * If 'enter' was clicked, check if the shortcut element isn't already focused
          */
-        if (!notPrevent && handlerContext !== document) {
+        if (prevent && handlerContext !== document) {
           dispatchEventOn(shortcutEl);
           return;
         }
