--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -6,7 +6,7 @@
     class:is-wide="wide"
     {style}
     tabindex="-1"
-    data-freeze-keystrokes="{freezeKeystrokes}"
+    data-freeze-keystrokes="{JSON.stringify(freezeKeystrokes)}"
     on:keyup
   >
     <div class="content -align-{align}" style={_contentStyle}>
@@ -46,7 +46,7 @@ let lastShortcutsState;
         fullscreen: false,
         wide: false,
         className: undefined,
-        freezeKeystrokes: true,
+        freezeKeystrokes: false,
       };
     },
     computed: {
