chore: 🤖 warns dev about a forced focus input behind the dialog

--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -95,6 +95,15 @@ let lastShortcutsState;
           // Force a div focus with tabindex="-1" to prevent Keystroke actions in App.html method checker
           if (_dialog) _dialog.focus();
 
+          // Warns if focus failed
+          if (__DEV__) {
+            if (document.activeElement instanceof HTMLInputElement) {
+              console.warn(
+                '!! Detected an input forced focus behind the Dialog element. This will make undesired side effects. Disable the "forcefocus" property when the Dialog element of its context open.',
+              );
+            }
+          }
+
           if (dialogsOpened === 1 && this.root.meta) {
             const { scrollable, navigable } = this.root.meta.get();
 
