--- a/packages/pos/simulator/view/pos/panels/Orgs.html
+++ b/packages/pos/simulator/view/pos/panels/Orgs.html
@@ -1,21 +1,83 @@
 <div class="title">Organização</div>
 
 <ul class="controllers">
-  {#each options as org}
+  {#each Object.keys(enumerator) as key}
     <li class="controller">
-      <span class="org">{strings(org)}</span>
+      <span class="org">{strings(key)}</span>
       <Radio
         name="orgs"
-        checked={current === org}
-        on:click="setOrg(org)"
+        checked={enumerator[key] === current}
+        on:click="setOrg(enumerator[key])"
       />
     </li>
   {/each}
 </ul>
 
 <script>
+  import { SystemOrganizationsDefault } from '../../../../drivers/system/enums.js';
   import { Registry } from '../../../index.js';
+  import { loadVirtualPosJson } from '../../../libs/organization/loadVirtualPosJson.js';
   import store from '../store.js';
+
+  async function setupExternalOrganizations() {
+    let orgModule = {};
+
+    const genericErrorMessage = 'External organizations not installed!';
+
+    try {
+      const { organizationEnumFileName, consolidatedOrganizationsFileName } =
+        __MODULE_ORGANIZATION_CONFIG__;
+      const organizationsEnum = await loadVirtualPosJson(organizationEnumFileName);
+      const consolidatedOrganizations = await loadVirtualPosJson(consolidatedOrganizationsFileName);
+      orgModule = { organizationsEnum, consolidatedOrganizations };
+    } catch (error) {
+      // Org files not found
+      console.warn(genericErrorMessage, error.message);
+      return;
+    }
+
+    Registry.persistent.set((draft) => {
+      const { current, enumerator } = draft.$System.Organizations;
+
+      try {
+        const { organizationsEnum } = orgModule;
+
+        if (!organizationsEnum || Object.keys(organizationsEnum).length === 0) {
+          throw new Error('invalid organizations enumerators');
+        }
+
+        const cloneEnumerator = { ...organizationsEnum };
+        draft.$System.Organizations.enumerator = cloneEnumerator;
+
+        const values = Object.values(cloneEnumerator);
+
+        if (!values.includes(current)) {
+          console.warn('Last `current` org not in external ones. Using first one.');
+          const [first] = values;
+          draft.$System.Organizations.current = first;
+        }
+      } catch (error) {
+        console.warn(genericErrorMessage, error.message);
+
+        if (!Object.values(enumerator).includes(current)) {
+          console.warn('Last `current` org not in default ones. Resetting.');
+          // reset orgs to default
+          draft.$System.Organizations = { ...SystemOrganizationsDefault };
+        }
+      }
+
+      try {
+        const { consolidatedOrganizations } = orgModule;
+        if (!consolidatedOrganizations || typeof consolidatedOrganizations !== 'object') {
+          throw new Error('invalid consolidated organizations data');
+        }
+
+        draft.$System.Organizations.external = { ...orgModule };
+      } catch (error) {
+        console.warn(genericErrorMessage, error.message);
+      }
+    });
+  }
 
   const Organizations = () => Registry.persistent.get().$System.Organizations;
 
@@ -32,12 +94,21 @@
     },
     data() {
       return {
-        options: Organizations().options,
         current: Organizations().current,
         enumerator: Organizations().enumerator,
       };
     },
+    async oncreate() {
+      await setupExternalOrganizations();
+      this.update();
+    },
     methods: {
+      update() {
+        this.set({
+          current: Organizations().current,
+          enumerator: Organizations().enumerator,
+        });
+      },
       setOrg(org) {
         Registry.persistent.set((draft) => {
           draft.$System.Organizations.current = org;
