update name icon of wifi

--- a/packages/components/Icon/Icon.html
+++ b/packages/components/Icon/Icon.html
@@ -84,7 +84,8 @@
     signal,
     star-outline,
     star,
-    wifi
+    wifi,
+    wifi-off
   );
 
   @each $mb-icon in $icon-list {
@@ -149,4 +150,5 @@
       height: 100%;
     }
   }
+
 </style>
