--- a/packages/styles/src/includes/desktop/fonts.pcss
+++ b/packages/styles/src/includes/desktop/fonts.pcss
@@ -1,17 +1,17 @@
 @font-face {
   font-family: 'Roboto';
   font-weight: 100 300;
-  src: url(assets/fonts/Roboto-Light.ttf) format('truetype');
+  src: url("assets/fonts/Roboto-Light.ttf") format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
   font-weight: normal;
-  src: url(assets/fonts/Roboto-Regular.ttf) format('truetype');
+  src: url("assets/fonts/Roboto-Regular.ttf") format('truetype');
 }
 
 @font-face {
   font-family: 'Roboto';
   font-weight: 700 900;
-  src: url(assets/fonts/Roboto-Bold.ttf) format('truetype');
+  src: url("assets/fonts/Roboto-Bold.ttf") format('truetype');
 }
