fix: missing comma that was breaking the bundle

--- a/packages/components/Icon/example/Example.html
+++ b/packages/components/Icon/example/Example.html
@@ -133,7 +133,7 @@
           'star-outline',
           'star',
           'wifi',
-          'wifi-off'
+          'wifi-off',
         ],
       };
     },
