Revert "fix: 🐛 remove the reset of the error message"

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -370,6 +370,7 @@
           if (validateOn === 'submit') {
             validationUpdate = {
               isValid: false,
+              _errorMsg: undefined,
             };
           }
 
