style: 💄 remove eslint from label

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -1,6 +1,12 @@
-<label class="input type-{type}" class:is-readable="readable" class:is-invalid="!isValid && !!_errorMsg"
-  class:is-focused="isFocused" class:is-compact="compact" class:has-password-toggle="_hasPasswordToggle"
-  style="background-color: {bgColor}; color: {labelColor};">
+<label
+  class="input type-{type}"
+  class:is-readable="readable"
+  class:is-invalid="!isValid && !!_errorMsg"
+  class:is-focused="isFocused"
+  class:is-compact="compact"
+  class:has-password-toggle="_hasPasswordToggle"
+  style="background-color: {bgColor}; color: {labelColor};"
+>
   {#if label}
     <span class="label">{label}</span>
   {/if}
