--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -1,4 +1,4 @@
-<svelte:window bind:scrollY="scrollY" />
+<svelte:window />
 
 {#if dataSection && dataSection.length > 0}
   <div class="flatlist {className}" class:disabled="disabled" class:hidden style={_styles} ref:flatListRef>
@@ -193,7 +193,7 @@
                 dataSection && dataSection[0].data.length > 2 ? navBar.getBoundingHeight() : 0,
             });
           } catch (e) {
-            if(__DEV__) {
+            if (__DEV__) {
               console.warn(e);
             }
           }
@@ -297,7 +297,7 @@
       },
       // _register elements (allowing handle them)
       _register(element, index, sectionIndex, focusableItem = undefined) {
-        const { _elementsRefs, selectedIndex, scrollY } = this.get();
+        const { _elementsRefs, selectedIndex } = this.get();
 
         const position = _elementsRefs.length;
 
@@ -315,7 +315,7 @@
 
         if (index === selectedIndex) {
           setTimeout(() => {
-            scrollActiveNodeAtIndex(_elementsRefs, selectedIndex, scrollY);
+            scrollActiveNodeAtIndex(_elementsRefs, selectedIndex);
           });
         }
       },
@@ -338,12 +338,11 @@
         }
 
         if (keyCode === ARROW_UP || keyCode === ARROW_DOWN) {
-          const { scrollY, selectedIndex, _elementsRefs } = this.get();
+          const { selectedIndex, _elementsRefs } = this.get();
 
           const internalIndex = selectRowItem({
             nodeList: _elementsRefs,
             index: selectedIndex,
-            yaxis: scrollY,
             keyAction: keyCode,
           });
 
@@ -397,9 +396,9 @@
           const _flatlist = this;
           domElement.onfocus = function _flatListFocus() {
             try {
-              const { _elementsRefs, scrollY } = _flatlist.get();
+              const { _elementsRefs } = _flatlist.get();
               const target = _elementsRefs[0];
-              scrollActiveNodeAtIndex(_elementsRefs, 0, scrollY);
+              // scrollActiveNodeAtIndex(_elementsRefs, 0);
               _flatlist.selectRowAtTarget(target, 0);
             } catch (_) {
               return null;
@@ -534,7 +533,7 @@
             _extraBounds: dataSection && dataSection[0].data.length > 2 ? boundingHeight : 0,
           });
         } catch (e) {
-          if(__DEV__) {
+          if (__DEV__) {
             console.warn(e);
           }
         }
