fix: 🐛 fix isCompact prop

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -3,7 +3,7 @@
   class:is-readable="readable"
   class:is-invalid="!isValid && !!_errorMsg"
   class:is-focused="isFocused"
-  class:is-compact="compact"
+  class:is-compact="isCompact"
   class:has-password-toggle="_hasPasswordToggle"
   style="background-color: {bgColor}; color: {labelColor};"
 >
