fix: 🐛 add prop "fullscreen" in failure print dialog

--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -20,6 +20,7 @@
   <Dialog
     ref:failureDialog
     on:close="fire('finish', true)"
+    fullscreen
   >
       <img class="failure-dialog-icon" src={alertIcon} alt="" />
       <h1 class="title-dialog">ERRO NA IMPRESSÃO</h1>
