remove the sorocred brand from the Example.html file and add the banricompras brand

--- a/packages/components/Brands/example/Example.html
+++ b/packages/components/Brands/example/Example.html
@@ -19,7 +19,7 @@
   <Brands icon='redecompras'/>
   <Brands icon='senff'/>
   <Brands icon='sodexo'/>
-  <Brands icon='sorocred'/>
+  <Brands icon='banricompras'/>
   <Brands icon='ticket'/>
   <Brands icon='unionpay'/>
   <Brands icon='up brasil'/>
